gitops/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-minikube-app
  labels:
    app: devops-minikube-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops-minikube-app
  template:
    metadata:
      labels:
        app: devops-minikube-app
    spec:
      containers:

        - name: devops-minikube-app
          image: ghcr.io/mohamedhamdy120/devops-pipeline-app:2e19a555e7564dade2a4f949719b4f75be2cd4a7
          imagePullPolicy: Always
          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
